academy admin components added by tuba

--- a/src/app/components/users/academyadmin/classrooms/classrooms.component.html
+++ b/src/app/components/users/academyadmin/classrooms/classrooms.component.html
@@ -1,6 +1,38 @@
-<p>
+<!-- <p>
   Idhr classrooms k cards show hongy...
   * ✔Classroom cards
-  * ✔Classroom details page
   * Modals
-</p>
+</p> -->
+
+<div class="animated fadeIn">
+    <div class="row">
+      <div class="col-4">
+        <div class="card text-white bg-dark">
+          <div class="card-header h4 ">
+            Maths
+            <button
+              class="btn btn-sm btn-outline-danger  float-right ml-2"
+              popover="Delete"
+              triggers="mouseenter:mouseleave"
+            >
+              <span><i class="fa fa-trash"></i> </span>
+            </button>
+          </div>
+          <div class="card-body">
+            <div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item bg-dark p-1">
+                  <i class="icon-people"></i> Students : <strong> 50 </strong>
+                </li>
+                <li class="list-group-item bg-dark p-1">
+                  <i class="icon-user"></i> Teacher : <strong> Safi </strong>
+                </li>
+                <li class="list-group-item bg-dark p-1">Performance Graph</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
