--- a/src/app/components/users/academyadmin/details/academydetail/academydetail.component.html
+++ b/src/app/components/users/academyadmin/details/academydetail/academydetail.component.html
@@ -7,8 +7,9 @@
         <div class="form-group">
             <div class="form-group">
                 <label for="Students" class="font-weight-bold"
-                >Total Students</label
                 >
+                Academy Name
+                </label>
                 <div class="input-group">
                   <div class="input-group-prepend">
                     <span class="input-group-text">
