--- a/src/app/components/users/academyadmin/requests/studentrequests/studentrequests.component.html
+++ b/src/app/components/users/academyadmin/requests/studentrequests/studentrequests.component.html
@@ -1,4 +1,54 @@
-<p>
+<!-- <p>
   studentrequests works!
   * Student request card or list
-</p>
+</p> -->
+
+
+<div class="animated fadeIn">
+    <div class="row">
+      <div class="col-4">
+        <div class="card text-white bg-dark">
+          <div class="card-header h4 ">
+            Student Name
+            <button
+              class="btn btn-sm btn-outline-info  float-right ml-2"
+              popover="View Profile"
+              triggers="mouseenter:mouseleave"
+            >
+              <span><i class="fa fa-eye"></i> </span>
+            </button>
+          </div>
+          <div class="card-body">
+            <div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item bg-dark p-1">
+                  <i class="icon-people"></i> Applied For :
+                  <strong>English</strong>
+                </li>
+              </ul>
+              <div class="row">
+                <div class="col-6">
+                  <button
+                    class="btn btn-sm btn-primary form-control mt-2 ml-4"
+                    popover="Accept"
+                    triggers="mouseenter:mouseleave"
+                  >
+                    <span><i class="fa fa-check"></i> </span>
+                  </button>
+                </div>
+                <div class="col-6">
+                  <button
+                    class="btn btn-sm btn-danger mt-2 ml-4"
+                    popover="Reject"
+                    triggers="mouseenter:mouseleave"
+                  >
+                    <span><i class="fa fa-times"></i> </span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
