--- a/src/app/components/users/academyadmin/requests/teacherrequests/teacherrequests.component.html
+++ b/src/app/components/users/academyadmin/requests/teacherrequests/teacherrequests.component.html
@@ -1,4 +1,65 @@
-<p>
+<!-- <p>
   teacherrequests works!
   * Teacher request card or list
-</p>
+</p> -->
+
+
+
+<div class="animated fadeIn">
+    <div class="row">
+      <div class="col-4">
+        <div class="card text-white bg-dark">
+          <div class="card-header h4 ">
+            Teacher Name
+            <button
+              class="btn btn-sm btn-outline-info float-right ml-2"
+              popover="View Profile"
+              triggers="mouseenter:mouseleave"
+            >
+              <span><i class="fa fa-eye"></i> </span>
+            </button>
+            <rating
+              class="ml-3"
+              [(ngModel)]="rate"
+              [max]="max"
+              [readonly]="isReadonly"
+              (onHover)="hoveringOver($event)"
+              (onLeave)="resetStar()"
+              [titles]="['one', 'two', 'three']"
+              name="rate"
+            ></rating>
+          </div>
+          <div class="card-body">
+            <div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item bg-dark p-1">
+                  <i class="icon-people"></i> Applied For :
+                  <strong>English</strong>
+                </li>
+              </ul>
+              <div class="row mt-3">
+                <div class="col-6">
+                  <button
+                    class="btn btn-sm btn-success form-control"
+                    popover="Accept"
+                    triggers="mouseenter:mouseleave"
+                  >
+                    <span><i class="fa fa-check"></i> </span>
+                  </button>
+                </div>
+                <div class="col-6">
+                  <button
+                    class="btn btn-sm btn-danger form-control"
+                    popover="Reject"
+                    triggers="mouseenter:mouseleave"
+                  >
+                    <span><i class="fa fa-times"></i> </span>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
