--- a/src/app/components/users/student/course/attendance/attendance.component.html
+++ b/src/app/components/users/student/course/attendance/attendance.component.html
@@ -1,4 +1,23 @@
-<p>
+<!-- <p>
   attendance works!
   * Attendance 
-</p>
+</p> -->
+
+
+<div class="form-group">
+    <label for="teacherName" class="font-weight-bold">Attendance</label>
+    <div class="input-group">
+      <div class="input-group-prepend">
+        <span class="input-group-text">
+          <i class="fa fa-user"></i>
+        </span>
+      </div>
+      <input
+        type="text"
+        id="attendance"
+        name="name"
+        class="form-control"
+        placeholder="Attendance"
+      />
+    </div>
+  </div>
