--- a/src/app/components/users/student/course/quizzes/quizzes.component.html
+++ b/src/app/components/users/student/course/quizzes/quizzes.component.html
@@ -1,5 +1,112 @@
-<p>
+<!-- <p>
   quizzes works!
   * Quiz Page
   * Filters Optional
-</p>
+</p> -->
+
+
+<div class="row">
+    <div class="col-sm-12">
+      <div class="card">
+        <div class="card-header">
+          <h3 class="d-inline">Quizzes Details Page STUDENT</h3>
+        </div>
+      </div>
+      <div class="animated fadeIn">
+        <div class="card">
+          <div class="card-header" (click)="isCollapsed = !isCollapsed">
+            <label for="className" class="font-weight-bold"
+              >Subject Name Here</label
+            >
+          </div>
+          <div
+            (collapsed)="collapsed($event)"
+            (expanded)="expanded($event)"
+            [collapse]="isCollapsed"
+          >
+            <table class="table table-striped table-hover table-responsive-sm table-responsive-md table-responsive-lg">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Title</th>
+                  <th>Added On</th>
+                  <th>Due Date</th>
+                  <th>Attempted On</th>
+                  <th>Time (min)</th>
+                  <th>Obtained Marks</th>
+                  <th>Total Marks</th>
+                  <th>Status</th>
+                  <th class="text-center">Controls</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>1</td>
+                  <td>Project Charter</td>
+                  <td>2012/01/01</td>
+                  <td>2012/01/01</td>
+                  <td>2012/01/01</td>
+                  <td>15</td>
+                  <td>8</td>
+                  <td>10</td>
+                  <td><span class="badge badge-success">Attemped</span></td>
+                  <td>
+                    <div class="pl-2 pr-2 text-center">
+                      <button
+                        class="btn p-0"
+                        popover="View"
+                        triggers="mouseenter:mouseleave"
+                      >
+                        <span>
+                          
+                          <i class="text-primary fa fa-eye">    </i> </span>
+
+                      </button>
+                      <button
+                        class="btn p-0 ml-2"
+                        popover="Attempt"
+                        triggers="mouseenter:mouseleave"
+                        hidden="true"
+                      >
+                        <span> <i class="text-success fa fa-pencil"></i> </span>
+                      </button>
+                    </div>
+                  </td>
+                </tr>
+                <tr>
+                  <td>1</td>
+                  <td>Project Charter</td>
+                  <td>2012/01/01</td>
+                  <td>2012/01/01</td>
+                  <td>2012/01/01</td>
+                  <td>15</td>
+                  <td>8</td>
+                  <td>10</td>
+                  <td><span class="badge badge-warning">Pending</span></td>
+                  <td>
+                    <div class="pl-2 pr-2 text-center">
+                      <button
+                        class="btn p-0"
+                        popover="View"
+                        triggers="mouseenter:mouseleave"
+                        hidden="true"
+                      >
+                        <span><i class="text-success fa fa-eye"></i> </span>
+                      </button>
+                      <button
+                        class="btn p-0 ml-2"
+                        popover="Attempt"
+                        triggers="mouseenter:mouseleave"
+                      >
+                        <span> <i class="text-success fa fa-pencil"></i> </span>
+                      </button>
+                    </div>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
