--- a/src/app/components/users/student/details/academydetail/academydetail.component.html
+++ b/src/app/components/users/student/details/academydetail/academydetail.component.html
@@ -1,3 +1,122 @@
-<p>
-  academydetail works!
-</p>
+<div class="col-sm-12"> 
+
+    <div class="card">
+      <div class="card-header"><h3>Academy Details</h3></div>
+      <div class="card-body">
+        <form action="">
+          <div class="form-group">
+              <div class="form-group">
+                  <label for="Students" class="font-weight-bold"
+                  >
+                  Academy Name
+                  </label>
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">
+                        <i class="fa fa-user"></i>
+                      </span>
+                    </div>
+                    <input type="number" id="dob" name="dob" class="form-control" />
+                  </div>
+                </div>
+            <label class="font-weight-bold">Rating</label>
+            <div class="input-group">
+              <!-- Ratinng Start -->
+              <!-- Ratinng Start -->
+              <!-- Ratinng Start -->
+              <!-- Ratinng Start -->
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-user"></i></span>
+              </div>
+              <rating
+              class="ml-3"
+              [(ngModel)]="rate"
+              [max]="max"
+              [readonly]="isReadonly"
+              (onHover)="hoveringOver($event)"
+              (onLeave)="resetStar()"
+              [titles]="['one', 'two', 'three']"
+              name="rate"
+              ></rating>
+              <!-- <span
+                class="label"
+                [ngClass]="{
+                  'label-warning': percent < 30,
+                  'label-info': percent >= 30 && percent < 70,
+                  'label-success': percent >= 70
+                }"
+                [ngStyle]="{
+                  display: overStar && !isReadonly ? 'inline' : 'none'
+                }"
+                >{{ percent }}%</span
+                >
+                <div class="card">
+                  <pre
+                  class="card-block card-header"
+                  >Rate: <b>{{rate}}</b>;  Readonly is: <i>{{isReadonly}}</i>;  Hovering over: <b>{{overStar || "none"}}</b></pre>
+                </div>
+                
+                <button
+                type="button"
+                class="btn btn-sm btn-danger"
+                (click)="rate = 0"
+                [disabled]="isReadonly"
+                >
+                Clear
+              </button>
+              <button
+              type="button"
+              class="btn btn-sm btn-primary"
+              (click)="isReadonly = !isReadonly"
+              >
+              Toggle Readonly
+            </button> -->
+            <!-- Ratinng End -->
+            <!-- Ratinng End -->
+            <!-- Ratinng End -->
+            <!-- Ratinng End -->
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="totalSubjects" class="font-weight-bold"
+          >Total Subjects</label
+          >
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text"><i class="fa fa-user"></i></span>
+            </div>
+            <input type="number" id="asd" name="name" class="form-control" />
+          </div>
+        </div>
+        
+        <div class="form-group">
+          <label for="Students" class="font-weight-bold"
+          >Total Students</label
+          >
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">
+                <i class="fa fa-user"></i>
+              </span>
+            </div>
+            <input type="number" id="dob" name="dob" class="form-control" />
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="Students" class="font-weight-bold"
+          >Total Teachers</label
+          >
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text">
+                <i class="fa fa-user"></i>
+              </span>
+            </div>
+            <input type="number" id="dob" name="dob" class="form-control" />
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  
+  </div>
