--- a/src/app/components/users/teacher/classrooms/classrooms.component.html
+++ b/src/app/components/users/teacher/classrooms/classrooms.component.html
@@ -1,3 +1,35 @@
-<p>
+<!-- <p>
   classrooms works!
-</p>
+</p> -->
+
+<div class="animated fadeIn">
+  <div class="row">
+    <div class="col-4">
+      <div class="card text-white bg-dark">
+        <div class="card-header h4 ">
+          Classroom
+          <button
+            class="btn btn-sm btn-warning  float-right ml-2"
+            popover="Announcement"
+            triggers="mouseenter:mouseleave"
+          >
+            <span><i class="fa fa-bullhorn"></i> </span>
+          </button>
+        </div>
+        <div class="card-body">
+          <div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item bg-dark p-1">
+                <i class="icon-people"></i> Students : <strong>50</strong>
+              </li>
+              <li class="list-group-item bg-dark p-1">
+                <i class="icon-people"></i> Delivered Lectures :
+                <strong>15</strong>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
