--- a/src/app/components/users/teacher/course/quizzes/quizzes.component.html
+++ b/src/app/components/users/teacher/course/quizzes/quizzes.component.html
@@ -1,3 +1,122 @@
-<p>
+<!-- <p>
   quizzes works!
-</p>
+</p> -->
+
+<div class="row">
+  <div class="col-sm-12">
+    <div class="card">
+      <div class="card-header">
+        <h3 class="d-inline">Quizzes Page TEACHER</h3>
+      </div>
+    </div>
+    <div class="animated fadeIn">
+      <div class="card">
+        <div class="card-header" (click)="isCollapsed = !isCollapsed">
+          <label for="className" class="font-weight-bold"
+            >Subject Name Here</label
+          >
+          <button class="btn btn-oultine-warning float-right" popover="Add" triggers="mouseenter:mouseleave">
+            <span> <i class="text-warning fa fa-lg fa-plus"></i> </span>
+          </button>
+        </div>
+        <div
+          (collapsed)="collapsed($event)"
+          (expanded)="expanded($event)"
+          [collapse]="isCollapsed"
+        >
+          <table class="table table-striped table-hover table-responsive-sm table-responsive-md table-responsive-lg">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Title</th>
+                <th>Made On</th>
+                <th>Added On</th>
+                <th>Due Date</th>
+                <th>Time (min)</th>
+                <th>Average Marks</th>
+                <th>Total Marks</th>
+                <th>Status</th>
+                <th>Attemped By</th>
+                <th class="text-center">Controls</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>Project Charter</td>
+                <td>2012/01/01</td>
+                <td>2012/01/01</td>
+                <td>2012/01/01</td>
+                <td>15</td>
+                <td>8.5</td>
+                <td>10</td>
+                <td><span class="badge badge-warning">Not Uploaded</span></td>
+                <td>N/A</td>
+                <td>
+                  <div class="pl-2 pr-2 text-center">
+                    <button class="btn p-0">
+                      <span popover="Edit" triggers="mouseenter:mouseleave">
+                        <i class="text-info fa fa-edit"></i
+                      ></span>
+                    </button>
+                    <button class="btn p-0 ml-2">
+                      <span popover="Delete" triggers="mouseenter:mouseleave">
+                        <i class="text-danger fa fa-trash"></i>
+                      </span>
+                    </button>
+                    <button class="btn p-0 ml-2">
+                      <span popover="Upload" triggers="mouseenter:mouseleave">
+                        <i class="text-warning fa fa-upload"></i>
+                      </span>
+                    </button>
+                    <button class="btn p-0 ml-2">
+                      <span popover="View" triggers="mouseenter:mouseleave">
+                        <i class="text-success fa fa-eye"></i>
+                      </span>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>Project Charter</td>
+                <td>2012/01/01</td>
+                <td>2012/01/01</td>
+                <td>2012/01/01</td>
+                <td>15</td>
+                <td>8.5</td>
+                <td>10</td>
+                <td><span class="badge badge-success">Uploaded</span></td>
+                <td>10/50</td>
+                <td>
+                  <div class="pl-2 pr-2 text-center">
+                    <button class="btn p-0">
+                      <span popover="Edit" triggers="mouseenter:mouseleave">
+                        <i class="text-info fa fa-edit"></i
+                      ></span>
+                    </button>
+                    <button class="btn p-0 ml-2">
+                      <span popover="Delete" triggers="mouseenter:mouseleave">
+                        <i class="text-danger fa fa-trash"></i>
+                      </span>
+                    </button>
+                    <button class="btn p-0 ml-2" hidden="true">
+                      <span popover="Upload" triggers="mouseenter:mouseleave">
+                        <i class="text-info fa fa-upload"></i>
+                      </span>
+                    </button>
+                    <button class="btn p-0 ml-2">
+                      <span popover="View" triggers="mouseenter:mouseleave">
+                        <i class="text-success fa fa-eye"></i>
+                      </span>
+                    </button>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
