--- a/src/app/components/users/teacher/details/studentdetail/studentdetail.component.html
+++ b/src/app/components/users/teacher/details/studentdetail/studentdetail.component.html
@@ -1,3 +1,201 @@
-<p>
+<!-- <p>
   studentdetail works!
-</p>
+</p> -->
+
+
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-header">
+        <h3 class="d-inline">Student Profile</h3>
+        <button
+          class="btn btn-oultine-warning float-right"
+          popover="Edit"
+          triggers="mouseenter:mouseleave"
+        >
+          <span> <i class="text-warning fa fa-lg fa-pencil"></i> </span>
+        </button>
+      </div>
+      <div class="card-body">
+        <form action="">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="firstName" class="font-weight-bold"
+                  >First Name</label
+                >
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text"
+                      ><i class="fa fa-user"></i
+                    ></span>
+                  </div>
+                  <input
+                    type="text"
+                    id="firstName"
+                    name="name"
+                    class="form-control"
+                    placeholder="First Name"
+                  />
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="lastName" class="font-weight-bold">Last Name</label>
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text">
+                      <i class="fa fa-user"></i>
+                    </span>
+                  </div>
+                  <input
+                    type="text"
+                    id="lastName"
+                    name="name"
+                    class="form-control"
+                    placeholder="Last Name"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="email" class="font-weight-bold">Email</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"
+                  ><i class="fa fa-envelope"></i
+                ></span>
+              </div>
+              <input
+                type="email"
+                id="email"
+                name="email"
+                class="form-control"
+                placeholder="Email"
+                autocomplete="email"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="dob" class="font-weight-bold">Date of Birth</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input type="date" id="dob" name="dob" class="form-control" />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="gender" class="font-weight-bold">Gender</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="text"
+                id="dob"
+                name="dob"
+                class="form-control"
+                placeholder="Gender"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="age" class="font-weight-bold">Age</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="number"
+                id="age"
+                name="age"
+                class="form-control"
+                disabled="true"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="address" class="font-weight-bold">Address</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="text"
+                id="dob"
+                name="dob"
+                class="form-control"
+                placeholder="Address"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="city" class="font-weight-bold">City</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="text"
+                id="dob"
+                name="dob"
+                class="form-control"
+                placeholder="City"
+              />
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="tel" class="font-weight-bold">Telephone</label>
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text">
+                  <i class="fa fa-user"></i>
+                </span>
+              </div>
+              <input
+                type="tel"
+                id="dob"
+                name="dob"
+                class="form-control"
+                placeholder="Telephone"
+              />
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-header"><h3>Academy Details</h3></div>
+      <div class="card-body">
+        <form action="">
+          <div class="form-group">
+            <label for="totalSubjects" class="font-weight-bold"
+              >Total Subjects</label
+            >
+            <div class="input-group">
+              <div class="input-group-prepend">
+                <span class="input-group-text"><i class="fa fa-user"></i></span>
+              </div>
+              <input type="number" id="asd" name="name" class="form-control" />
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
