--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -325,5 +325,5 @@
 </div>
 <app-footer>
   <span><a href="#">Al-Taleem</a> &copy; 2018 COMSATS.</span>
-  <span class="ml-auto">Powered by <a href="#">COSMATS</a></span>
+  <span class="ml-auto">Powered by <a href="#">COMSATS</a></span>
 </app-footer>
