--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -277,10 +277,10 @@
                         ></span>
                       </div>
                       <input
-                        class="form-control"
+                        class="form-control is-valid"
                         [ngClass]="{
                           'is-valid': !city.errors,
-                          'is-invalid': city.errors && city.touched
+                          'is-invalid': city.touched && city.errors
                         }"
                         formControlName="city"
                         placeholder="City"
@@ -290,9 +290,15 @@
                   </div>
                   <div
                     class="invalid-feedback d-block"
-                    *ngIf="city.errors && city.touched"
+                    *ngIf="city.errors && city.errors.required && city.touched"
                   >
                     City is required.
+                  </div>
+                  <div
+                    class="invalid-feedback d-block"
+                    *ngIf="city.errors && city.errors.minlength && city.touched"
+                  >
+                    City name must have 3 or more characters.
                   </div>
                   <div class="form-group">
                     <label class="font-weight-bold">Telephone</label>
