--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -320,7 +320,11 @@
               </div>
               <div class="card-footer p-4">
                 <div class="row">
-                  <button class="btn btn-block btn-success" (click)="signUp()">
+                  <button
+                    class="btn btn-block btn-success"
+                    (click)="signUp()"
+                    [disabled]="!specificUserForm.valid"
+                  >
                     Create Account
                   </button>
                 </div>
