temp changes... only Google Login, FBLogin has domain problem..

--- a/src/app/components/account/signup/signup.component.html
+++ b/src/app/components/account/signup/signup.component.html
@@ -176,17 +176,16 @@
               </div>
               <div class="card-footer p-4">
                 <div class="row">
-                  <div class="col-4">
+                  <!-- <div class="col-4">
                     <button
                       class="btn btn-block btn-facebook"
                       type="button"
-                      (click)="printValues()"
+                      (click)="facebookLogin()"
                     >
                       <i class="fa fa-facebook"></i>
-                      <!-- <span>Facebook</span> -->
                     </button>
-                  </div>
-                  <div class="col-4">
+                  </div> -->
+                  <div class="col-12">
                     <button
                       class="btn btn-block btn-google-plus"
                       type="button"
@@ -196,12 +195,11 @@
                       <!-- <span>Google</span> -->
                     </button>
                   </div>
-                  <div class="col-4">
+                  <!-- <div class="col-4">
                     <button class="btn btn-block btn-twitter" type="button">
                       <i class="fa fa-twitter"></i>
-                      <!-- <span>Twitter</span> -->
                     </button>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
